--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <hr><hr>
             <ul>
                 <li><a href="#">Ginning</a></li>
-                <li><a href="#">Oil Mill</a></li>
-                <li><a href="#">Spinning</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="Oil_Mill.html">Oil Mill</a></li>
+                <li><a href="Spinning.html">Spinning</a></li>
+                <li><a href="About_Us.html">About Us</a></li>
+                <li><a href="Login.html">LogOut</a></li>
             </ul>
         </nav>
         <div class="tabs">
