--- a/Login.html
+++ b/Login.html
@@ -24,7 +24,7 @@
                 <li><a href="Oil_Mill.html">Oil Mill</a></li>
                 <li><a href="Spinning.html">Spinning</a></li>
                 <li><a href="About_Us.html">About Us</a></li>
-                <li><a href="Login.html">LogOut</a></li>
+                <li><a href="Login.html">Sign_In</a></li>
             </ul>
         </nav>
 
